@@ -1,3 +1,9 @@
+2017-08-23  Tamar Christina  <tamar.christina@arm.com>
+
+	PR middle-end/19706
+	* tree-ssa-math-opts.c (convert_expand_mult_copysign):
+	Fix single-use check.
+
 2017-08-23  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	* gcc.c (execute): Only test for SIGKILL and SIGQUIT if available.
